objects/LLC_BI__Underwriting_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is populated automatically whenever Collateral is selected for CRE analysis in Spreads. This field specifies the Collateral associated with the Bundle.</description>
        <label>Collateral</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Underwriting Bundle</relationshipLabel>
        <relationshipName>Underwriting_Bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional. It is populated through the Salesforce layout. This text is used to describe the purpose of the underwriting bundle. Any text in this field will be displayed when selecting an underwriting bundle for a relationship.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__End_Date__c</fullName>
        <description>This field is currently not being used</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Consolidation__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this optional lookup field to specify the financial consolidation associated to the underwriting bundle. By default, it is blank.</description>
        <label>Financial Consolidation</label>
        <referenceTo>LLC_BI__Financial_Consolidation__c</referenceTo>
        <relationshipLabel>Underwriting Bundle</relationshipLabel>
        <relationshipName>Underwriting_Bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Import_Data_Source__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The data source used for importing spreads data directly into the bundle.</description>
        <label>Import Data Source</label>
        <referenceTo>LLC_BI__Data_Source__c</referenceTo>
        <relationshipLabel>Underwriting Bundle</relationshipLabel>
        <relationshipName>Underwriting_Bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Consolidation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this checkbox field to indicate if the purpose of an underwriting bundle is for consolidations. By default, it is not selected.</description>
        <label>Is Consolidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. Disabled templates are not visible in the underwriting start application.</description>
        <inlineHelpText>Disabled templates are not visible in the underwriting start application.</inlineHelpText>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This defaults to false. Determines whether or not this bundle can be used as a template for Relationship specific bundles.</description>
        <inlineHelpText>Determines whether or not this bundle can be used as a template for Relationship specific bundles.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Object_API_Name__c</fullName>
        <description>This field is optional. It defaults to empty. This field should be used by administrator to designate which objects a template bundle should be available for. The administrator should add the API name of the object which will add the template option to the Bundle selection page when accessed from that object.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API name of the object this bundle is used on.</inlineHelpText>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is required and automatically updated. Relationship to which this bundle belongs.</description>
        <inlineHelpText>Relationship to which this bundle belongs.</inlineHelpText>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Underwriting Bundle</relationshipLabel>
        <relationshipName>Underwriting_Bundle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Selected_Scale__c</fullName>
        <description>This field is used to determine to what degree of accuracy should record values be printed or displayed.</description>
        <label>Selected Scale</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$</fullName>
                    <default>true</default>
                    <label>$</label>
                </value>
                <value>
                    <fullName>m</fullName>
                    <label>k</label>
                </value>
                <value>
                    <fullName>mm</fullName>
                    <label>m</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Show_Footnotes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. User updated. Indicates whether Footnotes will be displayed for its statements.</description>
        <inlineHelpText>Indicates whether Footnotes will be displayed for its statements.</inlineHelpText>
        <label>Show Footnotes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Source_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this lookup field with the Underwriting Bundle template.</description>
        <label>Source Template</label>
        <referenceTo>LLC_BI__Underwriting_Bundle__c</referenceTo>
        <relationshipLabel>Cloned Bundles</relationshipLabel>
        <relationshipName>Cloned_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Start_Date__c</fullName>
        <description>This field is currently not being used</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Underwriting Bundle</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Underwriting Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Underwriting Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Date_Range_Must_Be_Valid</fullName>
        <active>true</active>
        <description>--DEPRECATED--</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>--DEPRECATED-- If this bundle is new or a template, the start and end dates must be blank.  If the bundle is not new and not a template, the start and end dates must be set and must not reduce the period range of the statements.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Template_Cannot_Have_Relationship</fullName>
        <active>true</active>
        <description>A template cannot be related to a Relationship.</description>
        <errorConditionFormula>AND(
  ( LLC_BI__Is_Template__c = True ),
  NOT( ISBLANK( LLC_BI__Relationship__c ) )
)</errorConditionFormula>
        <errorMessage>A template cannot be related to a Relationship.</errorMessage>
    </validationRules>
</CustomObject>